[project]
name = "b2b-monorepo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = []

[tool.uv.workspace]
members = [
    "shared",
    "b2b_services",
    "another",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "shared/src/b2b",
    "b2b_services/src/b2b"
]
